--- a/main.html
+++ b/main.html
@@ -9,7 +9,24 @@
     <script src="https://unpkg.com/scrollreveal@4.0.9/dist/scrollreveal.js"></script>
 </head>
 <body>
-    Aru, i started the template
+    <nav>
+        <img src="" alt="" class="logo" id="logo">
+        
+        <ul class="navigation">
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+
+        <img src="" alt="" class="safed_icon">
+        <img src="" alt="" class="profile icon">
+        
+    </nav>
+
+
 
 
     <script src="js/script.js"></script>
