--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
             <img src="assets/icons/Logo (1).png" alt="logo" class="logo" id="logo">
         
             <ul class="navigation">
-                <li class="link"><a href="#">Main</a></li>
-                <li class="link"><a href="#">About Us</a></li>
-                <li class="link"><a href="#">Catalog</a></li>
+                <li class="link"><a href="#hero">Main</a></li>
+                <li class="link"><a href="#about">About Us</a></li>
+                <li class="link"><a href="#menu">Catalog</a></li>
                 <li class="link"><a href="#">Reviews</a></li>
                 <li class="link"><a href="#">Contacts</a></li>
                 <li class="link"><a href="#">Restaurants</a></li>
