--- a/main.html
+++ b/main.html
@@ -81,6 +81,92 @@
         </div>
     </section>
 
+    <!-- Reviews -->
+     <section class="reviews" id="reviews">
+        <div class="container">
+            <div class="reviews_head">
+                <div class="rating_stat">
+                    <h1 class="reviews_header">Reviews</h1>
+                    <div class="reviews_rating">
+                        4 <img src="assets/img/star_4.png" alt="stars" class="reviews_rating_stars"> <span>Over 196 Reviews</span>
+                    </div>
+                </div>
+                <button class="reviews_btn"> <img src="assets/icons/pen_icon.png" alt=""> <span>Write a Review</span></button>
+            </div>
+
+            <div class="reviews_cards">
+
+                <div class="reviews_card">
+                    <div class="reviews_card_head">
+                        <img src="assets/icons/reviews_card_user_img.png" alt="user" class="reviews_card_user_img">
+                        <div class="reviews_card_user_name">Sara <br> Johnson <br><span>3 days ago</span></div>
+                        <img src="assets/icons/google_icon.png" alt="" class="google_icon">
+                    </div>
+
+                    <img src="assets/img/star_5.png" alt="stars" class="reviews_rating_star_5">
+                    <div class="reviews_card_user_comment">Today I made carbonara pasta, and it was delicious! The dish turned out to be creamy and very satisfying, and the bacon added a wonderful flavor and crispy texture!!!</div>
+                </div>
+
+                <div class="reviews_card">
+                    <div class="reviews_card_head">
+                        <img src="assets/icons/reviews_card_user_img.png" alt="user" class="reviews_card_user_img">
+                        <div class="reviews_card_user_name">John <br> Miller <br><span>9 days ago</span></div>
+                        <img src="assets/icons/google_icon.png" alt="" class="google_icon">
+                    </div>
+
+                    <img src="assets/img/star_4.png" alt="stars" class="reviews_rating_star_5">
+                    <div class="reviews_card_user_comment">Simple and convenient site with amazing recipes!</div>
+                </div>
+
+                <div class="reviews_card">
+                    <div class="reviews_card_head">
+                        <img src="assets/icons/reviews_card_user_img.png" alt="user" class="reviews_card_user_img">
+                        <div class="reviews_card_user_name">Olivia <br> Brown <br><span>1 month ago</span></div>
+                        <img src="assets/icons/google_icon.png" alt="" class="google_icon">
+                    </div>
+
+                    <img src="assets/img/star_5.png" alt="stars" class="reviews_rating_star_5">
+                    <div class="reviews_card_user_comment">This website has completely transformed my cooking routine. The recipes are easy to follow and always turn out delicious. I love the variety of dishes from different cuisines. The user reviews and ratings are incredibly helpful</div>
+                </div>
+            </div>
+        </div>
+     </section>
+
+     <!-- Contact -->
+     <section class="contact" id="contact">
+        <div class="container">
+            <div class="overlay">
+                <div class="our_contacts_block">
+                    <h2 class="our_contacts_header">Our Contacts</h2>
+                    <div class="our_contacts_inf">
+                        <div class="contact_media_inf">Media:  <span class="space">---------</span>   <span>@cookbook</span></div>
+                        <div class="contact_phone_inf">Phone:  <span class="space">---------</span>   <span>+702-503-87-30</span></div>
+                        <div class="contact_email_inf">Email:   <span class="space">------</span>  <span>cook.book@gmail.com</span></div>
+                        <div class="contact_address_inf">Address:   <span class="space">---------</span>  <span>123 Main Str, <br> Atyrau, Kazakhstan, KZ</span></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+     </section>
+
+    <section class="registration" id="registration">
+        <div class="container">
+            <h1 class="registration_header">Registration</h1>
+            <div class="registration_form">
+                <form action="index.html" method="post" class="registration_form">
+                    <div class="inputs">
+                        <input class="input" type="text" id="name" name="name" placeholder="Name">
+                        <input class="input" type="text" id="surname" name="surname" placeholder="Surname">
+                        <input class="input" type="text" id="email" name="email" placeholder="Email">
+                        <input class="input" type="text" id="phone" name="phone" placeholder="Phone">
+                    </div>
+                    <button class="registration_btn">Send</button>
+                </form>
+    
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
