--- a/main.html
+++ b/main.html
@@ -150,6 +150,7 @@
         </div>
      </section>
 
+     <!-- Registration -->
     <section class="registration" id="registration">
         <div class="container">
             <h1 class="registration_header">Registration</h1>
@@ -164,6 +165,133 @@
                     <button class="registration_btn">Send</button>
                 </form>
     
+        </div>
+    </section>
+
+    <!-- FAQ -->
+    <section class="faq" id="faq">
+        <div class="container">
+            <div class="faq_head">
+                <div class="faq_logo_text">FAQ</div>
+                <img src="assets/icons/Logo (1).png" alt="logo" class="faq_icon">
+
+            </div>
+
+            <h1 class="faq_header">Frequently Asked Questions</h1>
+            
+            <div class="faq_items">
+                <div class="faq-item">
+                    <details>
+                        <summary>How do I register on the website?</summary>
+                        <div class="content">
+                            <p>You can register by clicking on the "Sign Up" button on the top right corner and following the instructions.</p>
+                        </div>
+                    </details>
+                </div>
+                <div class="faq-item">
+                    <details>
+                        <summary>How can I find a specific recipe?</summary>
+                        <div class="content">
+                            <p>Use the search bar at the top of the page to type in the name of the recipe you're looking for.</p>
+                        </div>
+                    </details>
+                </div>
+                <div class="faq-item">
+                    <details>
+                        <summary>Can I leave comments and reviews on recipes?</summary>
+                        <div class="content">
+                            <p>Yes, you can leave comments and reviews on each recipe page if you are logged in.</p>
+                        </div>
+                    </details>
+                </div>
+                <div class="faq-item">
+                    <details>
+                        <summary>How can I find restaurants that serve a specific dish?</summary>
+                        <div class="content">
+                            <p>In the "Restaurants" section, you can find information about restaurants that serve various dishes.</p>
+                        </div>
+                    </details>
+                </div>
+                <div class="faq-item">
+                    <details>
+                        <summary>The website is not working correctly. What should I do?</summary>
+                        <div class="content">
+                            <p>If the website is not working correctly, please contact our support team through the "Contact Us" page.</p>
+                        </div>
+                    </details>
+                </div>
+                <div class="faq-item">
+                    <details>
+                        <summary>Can I save my favorite recipes?</summary>
+                        <div class="content">
+                            <p>Yes, you can save your favorite recipes by clicking the "Save" button on the recipe page.</p>
+                        </div>
+                    </details>
+                </div>
+                <div class="faq-item">
+                    <details>
+                        <summary>How can I share a recipe with my friends?</summary>
+                        <div class="content">
+                            <p>You can share recipes using the share buttons available on each recipe page.</p>
+                        </div>
+                    </details>
+                </div>
+                <div class="faq-item">
+                    <details>
+                        <summary>How can I customize the portion size of a recipe?</summary>
+                        <div class="content">
+                            <p>You can customize the portion size by using the portion size adjuster available on the recipe page.</p>
+                        </div>
+                    </details>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Slider -->
+    <section class="slider" id="slider">
+        <div class="slide slide-01">
+            <div class="content">
+                <h2 class="number">01</h2>
+                <h3 class="title">Квалифицированные специалисты</h3>
+                <p class="description">Сотрудники нашей компании являются профессионалами в своей области, обладающие высококвалифицированными знаниями и богатым опытом для выполнения своих обязанностей. Мы ценим в своих сотрудниках стремление к достижению результата, для этого наша компания обеспечивает и создает безопасные условия труда и содействует в их профессиональном развитии, а это залог оказания качественных услуг нашим партнерам.</p>
+                <div class="arrow">&#8594;</div>
+            </div>
+        </div>
+        <div class="slide slide-02">
+            <div class="content">
+                <h2 class="number">02</h2>
+                <h3 class="title">Собственные локомотивы</h3>
+                <div class="arrow">&#8594;</div>
+            </div>
+        </div>
+        <div class="slide slide-03">
+            <div class="content">
+                <h2 class="number">03</h2>
+                <h3 class="title">Собственные фитинговые платформы</h3>
+                <div class="arrow">&#8594;</div>
+            </div>
+        </div>
+        <div class="slide slide-04">
+            <div class="content">
+                <h2 class="number">04</h2>
+                <h3 class="title">Высокий уровень обслуживания и поддержки</h3>
+                <div class="arrow">&#8594;</div>
+            </div>
+        </div>
+        <div class="slide slide-05">
+            <div class="content">
+                <h2 class="number">04</h2>
+                <h3 class="title">Высокий уровень обслуживания и поддержки</h3>
+                <div class="arrow">&#8594;</div>
+            </div>
+        </div>
+        <div class="slide slide-06">
+            <div class="content">
+                <h2 class="number">04</h2>
+                <h3 class="title">Высокий уровень обслуживания и поддержки</h3>
+                <div class="arrow">&#8594;</div>
+            </div>
         </div>
     </section>
 
