--- a/main.html
+++ b/main.html
@@ -295,6 +295,13 @@
         </div>
     </section>
 
+    <footer class="footer" id="footer">
+        <div class="container">
+            <div class="line"></div>
+            nav.foot_navigation
+        </div>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
