--- a/main.html
+++ b/main.html
@@ -297,8 +297,36 @@
 
     <footer class="footer" id="footer">
         <div class="container">
-            <div class="line"></div>
-            nav.foot_navigation
+            <nav class="foot_navigation">
+                <ul>
+                    <li class="link"><a href="#">Recipes</a></li>
+                    <li class="link"><a href="#">Authors</a></li>
+                    <li class="link"><a href="#">Editorial Board</a></li>
+                    <li class="link"><a href="#">Mailing</a></li>
+                    <li class="link"><a href="#">Ideas</a></li>
+                    <li class="link"><a href="#">FAQ</a></li>
+                    <li class="link"><a href="#">Advertisement</a></li>
+                    <li class="link"><a href="#">Report an error</a></li>
+                </ul>
+
+                <div class="social">
+                    <span>
+                        <a href="#f"><i class="ri-instagram-fill"></i></a>
+                    </span>
+                    <span>
+                      <a href="#f"><i class="ri-linkedin-fill"></i></a>
+                    </span>
+                    <span>
+                      <a href="#f"><i class="ri-telegram-fill"></i></a>
+                    </span>
+                    <span>
+                      <a href="#f"><i class="ri-discord-fill"></i></a>
+                    </span>
+                  </div>
+            </nav>
+
+            <div class="rights">“COOK” LLC, 2024. ALL RIGHTS RESERVED.</div>
+
         </div>
     </footer>
 
