start template of other pages

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
             <img src="assets/icons/Logo (1).png" alt="logo" class="logo" id="logo">
         
             <ul class="navigation" data-navbar>
-                <li class="link"><a href="#hero" data-nav-link>Main</a></li>
+                <li class="link"><a href="main.html" data-nav-link>Main</a></li>
                 <li class="link"><a href="#about" data-nav-link>About Us</a></li>
                 <li class="link"><a href="#menu" data-nav-link>Catalog</a></li>
                 <li class="link"><a href="#reviews" data-nav-link>Reviews</a></li>
@@ -42,7 +42,8 @@
         <div class="catalog_items">
             <div class="container">
                 <div class="catalog_item">
-                    <img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img">
+                    
+                    <a href="meal.html"><img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img"></a>
                     <div class="catalog_item_content">
                         <div class="catalog_item_preheader">
                             <div class="catalog_item_subheader">SOUPS · STEP-BY-STEP RECIPES</div>
@@ -63,7 +64,7 @@
                 </div>
 
                 <div class="catalog_item">
-                    <img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img">
+                    <a href="meal.html"><img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img"></a>
                     <div class="catalog_item_content">
                         <div class="catalog_item_preheader">
                             <div class="catalog_item_subheader">SOUPS · STEP-BY-STEP RECIPES</div>
@@ -84,7 +85,7 @@
                 </div>
 
                 <div class="catalog_item">
-                    <img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img">
+                    <a href="meal.html"><img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img"></a>
                     <div class="catalog_item_content">
                         <div class="catalog_item_preheader">
                             <div class="catalog_item_subheader">SOUPS · STEP-BY-STEP RECIPES</div>
@@ -105,7 +106,7 @@
                 </div>
 
                 <div class="catalog_item">
-                    <img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img">
+                    <a href="meal.html"><img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img"></a>
                     <div class="catalog_item_content">
                         <div class="catalog_item_preheader">
                             <div class="catalog_item_subheader">SOUPS · STEP-BY-STEP RECIPES</div>
@@ -126,7 +127,7 @@
                 </div>
 
                 <div class="catalog_item">
-                    <img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img">
+                    <a href="meal.html"><img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img"></a>
                     <div class="catalog_item_content">
                         <div class="catalog_item_preheader">
                             <div class="catalog_item_subheader">SOUPS · STEP-BY-STEP RECIPES</div>
@@ -147,7 +148,7 @@
                 </div>
 
                 <div class="catalog_item">
-                    <img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img">
+                    <a href="meal.html"><img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img"></a>
                     <div class="catalog_item_content">
                         <div class="catalog_item_preheader">
                             <div class="catalog_item_subheader">SOUPS · STEP-BY-STEP RECIPES</div>
@@ -168,7 +169,7 @@
                 </div>
 
                 <div class="catalog_item">
-                    <img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img">
+                    <a href="meal.html"><img src="assets/img/catalog_item_1.png" alt="" class="catalog_item_img"></a>
                     <div class="catalog_item_content">
                         <div class="catalog_item_preheader">
                             <div class="catalog_item_subheader">SOUPS · STEP-BY-STEP RECIPES</div>
