--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
             <ul class="navigation" data-navbar>
                 <li class="link"><a href="#hero" data-nav-link>Main</a></li>
                 <li class="link"><a href="#about" data-nav-link>About Us</a></li>
-                <li class="link"><a href="#menu" data-nav-link>Catalog</a></li>
+                <li class="link"><a href="catalog.html" data-nav-link>Catalog</a></li>
                 <li class="link"><a href="#reviews" data-nav-link>Reviews</a></li>
                 <li class="link"><a href="#contact" data-nav-link>Contacts</a></li>
                 <li class="link"><a href="#" data-nav-link>Restaurants</a></li>
@@ -80,7 +80,7 @@
                 <img src="assets/img/Meal_3.png" alt="" class="meal_img_3">
             </div>
     </section>
-
+ 
     <!-- Reviews -->
      <section class="reviews" id="reviews">
         <div class="container">
