--- a/meal.html
+++ b/meal.html
@@ -42,7 +42,96 @@
     </div>
 
 
+    <div class="meal_page_img_and_author">
+        <div class="container">
 
+            <img src="assets/img/meal_page_brownie.png" alt="" class="meal_page_brownie">
+
+            <div class="meal_page_author">
+                <img src="assets/img/meal_page_author.png" alt="" class="meal_page_author_img">
+                <div class="meal_page_author_info">AUTHOR: ANASTASIA SHEVELEVA</div>
+            </div>
+
+            <div class="meal_page_logo">
+                <img src="assets/icons/Logo (1).png" alt="" class="logo">
+                <div class="meal_page_author_of_recipe">THE AUTHOR OF THE RECIPE</div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="meal_page_description">
+        <div class="container">
+            One of the most popular desserts in the world — brownies — was invented in 1893 in the kitchen of the legendary Palmer House hotel in Chicago. This pie is still baked there according to the original recipe, covering the top with apricot glaze. In the home version, however, brownies get such an amazing sugar crust that it would be a crime to glaze it. Traditional chocolate brownies have a vanilla flavor, a crisp crust and a moist middle. Walnuts or pistachios are also added to the cake, as well as cranberries.
+        </div>
+    </div>
+
+    <div class="meal_page_kbzhu">
+        <div class="container">
+            <h1 class="meal_page_kbzhu_header">ENERGY VALUE PER SERVING</h1>
+            <div class="kbzhu_container">
+                <div class="meal_page_kbzhu_item">
+                    <div>CALORIES</div>
+                    <div class="meal_page_kbzhu_value">676</div>
+                    <div>KCAL</div>
+                </div>
+                <div class="meal_page_kbzhu_item">
+                    <div>PROTEINS</div>
+                    <div class="meal_page_kbzhu_value">10</div>
+                    <div>GRAMS</div>
+                </div>
+                <div class="meal_page_kbzhu_item">
+                    <div>FATS</div>
+                    <div class="meal_page_kbzhu_value">46</div>
+                    <div>GRAMS</div>
+                </div>
+                <div class="meal_page_kbzhu_item">
+                    <div>CARBOHYDRATES</div>
+                    <div class="meal_page_kbzhu_value">55</div>
+                    <div>GRAMS</div>
+                </div>
+            </div>
+            <div class="meal_page_kbzhu_note">* CALORIES CALCULATED FOR RAW PRODUCTS</div>
+        </div>
+    </div>
+
+    <div class="meal_page_ingredients">
+        <div class="container">
+            <div class="meal_page_ingredients_header">INGREDIENTS</div>
+            <div class="meal_page_ingredients_list">
+                <div class="meal_page_ingredients_item">
+                    <div class="meal_page_ingredients_item_name">Dark chocolate</div>
+                    <div class="line"></div>
+                    <div class="meal_page_ingredients_item_value">100 g</div>
+                </div>
+                <div class="meal_page_ingredients_item">
+                    <div class="meal_page_ingredients_item_name">BUTTER</div>
+                    <div class="line"></div>
+                    <div class="meal_page_ingredients_item_value">180 g</div>
+                </div>
+                <div class="meal_page_ingredients_item">
+                    <div class="meal_page_ingredients_item_name">Brown sugar</div>
+                    <div class="line"></div>
+                    <div class="meal_page_ingredients_item_value">200 g</div>
+                </div>
+                <div class="meal_page_ingredients_item">
+                    <div class="meal_page_ingredients_item_name">Chicken egg</div>
+                    <div class="line"></div>
+                    <div class="meal_page_ingredients_item_value">4</div>
+                </div>
+                <div class="meal_page_ingredients_item">
+                    <div class="meal_page_ingredients_item_name">Wheat flour</div>
+                    <div class="line"></div>
+                    <div class="meal_page_ingredients_item_value">100 g</div>
+                </div>
+                <div class="meal_page_ingredients_item">
+                    <div class="meal_page_ingredients_item_name">Walnuts</div>
+                    <div class="line"></div>
+                    <div class="meal_page_ingredients_item_value">100 g</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <footer class="footer" id="footer">
