--- a/meal.html
+++ b/meal.html
@@ -105,7 +105,7 @@
                     <div class="meal_page_ingredients_item_value">100 g</div>
                 </div>
                 <div class="meal_page_ingredients_item">
-                    <div class="meal_page_ingredients_item_name">BUTTER</div>
+                    <div class="meal_page_ingredients_item_name">Butter</div>
                     <div class="line"></div>
                     <div class="meal_page_ingredients_item_value">180 g</div>
                 </div>
@@ -117,7 +117,7 @@
                 <div class="meal_page_ingredients_item">
                     <div class="meal_page_ingredients_item_name">Chicken egg</div>
                     <div class="line"></div>
-                    <div class="meal_page_ingredients_item_value">4</div>
+                    <div class="meal_page_ingredients_item_value">4 p</div>
                 </div>
                 <div class="meal_page_ingredients_item">
                     <div class="meal_page_ingredients_item_name">Wheat flour</div>
@@ -128,6 +128,20 @@
                     <div class="meal_page_ingredients_item_name">Walnuts</div>
                     <div class="line"></div>
                     <div class="meal_page_ingredients_item_value">100 g</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="meal_page_instruction">
+        <div class="container">
+            <div class="meal_page_header">COOKING INSTRUCTIONS</div>
+
+            <div class="meal_page_instruction_items">
+                    
+                <div class="meal_page_instruction_item">
+
                 </div>
             </div>
         </div>
